--- a/languages/propovoice.pot
+++ b/languages/propovoice.pot
@@ -6,7 +6,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2022-08-17 05:11+0000\n"
+"POT-Creation-Date: 2022-08-17 05:43+0000\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-KeywordsList: __;_e;_ex:1,2c;_n:1,2;_n_noop:1,2;_nx:1,2,4c;_nx_noop:1,2,3c;_x:1,2c;esc_attr__;esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c\n"
 "X-Poedit-SearchPath-0: .\n"
@@ -171,7 +171,7 @@ msgstr ""
 msgid "Declined"
 msgstr ""
 
-#: ../app/Helpers/I18n.php:53
+#: ../app/Helpers/I18n.php:53, ../app/Helpers/I18n.php:140
 msgid "Paid"
 msgstr ""
 
@@ -247,7 +247,7 @@ msgstr ""
 msgid "Zip Code"
 msgstr ""
 
-#: ../app/Helpers/I18n.php:74
+#: ../app/Helpers/I18n.php:74, ../app/Helpers/I18n.php:168
 msgid "Address"
 msgstr ""
 
@@ -472,87 +472,83 @@ msgid "Back to WP Dashboard"
 msgstr ""
 
 #: ../app/Helpers/I18n.php:138
-msgid "Mark as Done"
+msgid "Mark"
 msgstr ""
 
 #: ../app/Helpers/I18n.php:139
-msgid "Mark As Paid"
-msgstr ""
-
-#: ../app/Helpers/I18n.php:140
-msgid "Mark as completed"
+msgid "Done"
 msgstr ""
 
 #: ../app/Helpers/I18n.php:141
-msgid "as"
+msgid "completed"
 msgstr ""
 
 #: ../app/Helpers/I18n.php:142
-msgid "successful"
+msgid "as"
 msgstr ""
 
 #: ../app/Helpers/I18n.php:143
-msgid "Submit"
+msgid "successful"
 msgstr ""
 
 #: ../app/Helpers/I18n.php:144
-msgid "Proposal"
+msgid "Submit"
 msgstr ""
 
 #: ../app/Helpers/I18n.php:145
-msgid "Accounting"
+msgid "Proposal"
 msgstr ""
 
 #: ../app/Helpers/I18n.php:146
-msgid "Need Support"
+msgid "Accounting"
 msgstr ""
 
 #: ../app/Helpers/I18n.php:147
-msgid "Feedback"
+msgid "Need Support"
 msgstr ""
 
 #: ../app/Helpers/I18n.php:148
-msgid "Attachment"
+msgid "Feedback"
 msgstr ""
 
 #: ../app/Helpers/I18n.php:149
-msgid "Fee"
+msgid "Attachment"
 msgstr ""
 
 #: ../app/Helpers/I18n.php:150
-msgid "Fields"
+msgid "Fee"
 msgstr ""
 
 #: ../app/Helpers/I18n.php:151
-msgid "Discount"
+msgid "Fields"
 msgstr ""
 
 #: ../app/Helpers/I18n.php:152
-msgid "Transection"
+msgid "Discount"
 msgstr ""
 
 #: ../app/Helpers/I18n.php:153
-msgid "Stripe"
+msgid "Transection"
 msgstr ""
 
 #: ../app/Helpers/I18n.php:154
-msgid "Public"
+msgid "Stripe"
 msgstr ""
 
 #: ../app/Helpers/I18n.php:155
-msgid "Full"
+msgid "Public"
 msgstr ""
 
 #: ../app/Helpers/I18n.php:156
-msgid "delivery"
+msgid "Full"
 msgstr ""
 
 #: ../app/Helpers/I18n.php:157
-msgid "option"
+msgid "delivery"
 msgstr ""
 
 #: ../app/Helpers/I18n.php:158
-msgid "clolor"
+msgid "option"
 msgstr ""
 
 #: ../app/Helpers/I18n.php:159
@@ -591,16 +587,40 @@ msgstr ""
 msgid "Unschedule"
 msgstr ""
 
-#: ../app/Helpers/I18n.php:168
-msgid " Address"
-msgstr ""
-
 #: ../app/Helpers/I18n.php:169
 msgid " Timeline"
 msgstr ""
 
 #: ../app/Helpers/I18n.php:170
-msgid "  Active"
+msgid "Active"
+msgstr ""
+
+#: ../app/Helpers/I18n.php:171
+msgid "Media"
+msgstr ""
+
+#: ../app/Helpers/I18n.php:172
+msgid "Gallery"
+msgstr ""
+
+#: ../app/Helpers/I18n.php:173
+msgid "Insert"
+msgstr ""
+
+#: ../app/Helpers/I18n.php:174
+msgid "Others"
+msgstr ""
+
+#: ../app/Helpers/I18n.php:175
+msgid "Bank"
+msgstr ""
+
+#: ../app/Helpers/I18n.php:176
+msgid "Skip"
+msgstr ""
+
+#: ../app/Helpers/I18n.php:177
+msgid "Label"
 msgstr ""
 
 #: ../app/Models/Org.php:89, ../app/Models/Org.php:173, ../app/Models/Person.php:86, ../app/Models/Person.php:164
