--- a/languages/propovoice.pot
+++ b/languages/propovoice.pot
@@ -6,7 +6,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2023-04-29 05:45+0000\n"
+"POT-Creation-Date: 2023-05-01 04:19+0000\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-KeywordsList: __;_e;_ex:1,2c;_n:1,2;_n_noop:1,2;_nx:1,2,4c;_nx_noop:1,2,3c;_x:1,2c;esc_attr__;esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c\n"
 "X-Poedit-SearchPath-0: .\n"
@@ -247,7 +247,7 @@ msgstr ""
 msgid "Content"
 msgstr ""
 
-#: ../app/Helper/I18n.php:76
+#: ../app/Helper/I18n.php:76, ../app/Helper/I18n.php:166
 msgid "Number"
 msgstr ""
 
@@ -287,7 +287,7 @@ msgstr ""
 msgid "Extra"
 msgstr ""
 
-#: ../app/Helper/I18n.php:86, ../app/Helper/I18n.php:296
+#: ../app/Helper/I18n.php:86, ../app/Helper/I18n.php:301
 msgid "Subtotal"
 msgstr ""
 
@@ -327,7 +327,7 @@ msgstr ""
 msgid "Declined"
 msgstr ""
 
-#: ../app/Helper/I18n.php:96, ../app/Helper/I18n.php:250
+#: ../app/Helper/I18n.php:96, ../app/Helper/I18n.php:254
 msgid "Paid"
 msgstr ""
 
@@ -487,7 +487,7 @@ msgstr ""
 msgid "Status"
 msgstr ""
 
-#: ../app/Helper/I18n.php:143
+#: ../app/Helper/I18n.php:143, ../app/Helper/I18n.php:163
 msgid "Date"
 msgstr ""
 
@@ -511,7 +511,7 @@ msgstr ""
 msgid "Search"
 msgstr ""
 
-#: ../app/Helper/I18n.php:149
+#: ../app/Helper/I18n.php:149, ../app/Helper/I18n.php:164
 msgid "Select"
 msgstr ""
 
@@ -552,732 +552,740 @@ msgstr ""
 msgid "Icon"
 msgstr ""
 
-#: ../app/Helper/I18n.php:162, ../app/Helper/I18n.php:174
+#: ../app/Helper/I18n.php:162, ../app/Helper/I18n.php:178
 msgid "Text"
 msgstr ""
 
-#: ../app/Helper/I18n.php:163
-msgid "Image"
-msgstr ""
-
-#: ../app/Helper/I18n.php:164
-msgid "Add"
-msgstr ""
-
-#: ../app/Helper/I18n.php:165, ../app/Helper/I18n.php:169
-msgid "New"
-msgstr ""
-
-#: ../app/Helper/I18n.php:166
-msgid "Edit"
+#: ../app/Helper/I18n.php:165
+msgid "Multiselect"
 msgstr ""
 
 #: ../app/Helper/I18n.php:167
-msgid "Update"
+msgid "Image"
 msgstr ""
 
 #: ../app/Helper/I18n.php:168
-msgid "Delete"
+msgid "Add"
+msgstr ""
+
+#: ../app/Helper/I18n.php:169, ../app/Helper/I18n.php:173
+msgid "New"
 msgstr ""
 
 #: ../app/Helper/I18n.php:170
-msgid "From"
+msgid "Edit"
 msgstr ""
 
 #: ../app/Helper/I18n.php:171
-msgid "here"
+msgid "Update"
 msgstr ""
 
 #: ../app/Helper/I18n.php:172
-msgid "Tag"
+msgid "Delete"
 msgstr ""
 
-#: ../app/Helper/I18n.php:173
-msgid "Background"
+#: ../app/Helper/I18n.php:174
+msgid "From"
 msgstr ""
 
 #: ../app/Helper/I18n.php:175
-msgid "Color"
+msgid "here"
 msgstr ""
 
 #: ../app/Helper/I18n.php:176
-msgid "Description"
+msgid "Tag"
 msgstr ""
 
 #: ../app/Helper/I18n.php:177
-msgid "Note"
-msgstr ""
-
-#: ../app/Helper/I18n.php:178
-msgid "Title"
+msgid "Background"
 msgstr ""
 
 #: ../app/Helper/I18n.php:179
-msgid "Start"
+msgid "Color"
 msgstr ""
 
 #: ../app/Helper/I18n.php:180
-msgid "Due"
+msgid "Description"
 msgstr ""
 
 #: ../app/Helper/I18n.php:181
-msgid "Due Date"
+msgid "Note"
 msgstr ""
 
 #: ../app/Helper/I18n.php:182
-msgid "Subject"
+msgid "Title"
 msgstr ""
 
 #: ../app/Helper/I18n.php:183
-msgid "Message"
+msgid "Start"
 msgstr ""
 
 #: ../app/Helper/I18n.php:184
-msgid "Clear"
+msgid "Due"
 msgstr ""
 
 #: ../app/Helper/I18n.php:185
-msgid "Account"
+msgid "Due Date"
 msgstr ""
 
-#: ../app/Helper/I18n.php:186, ../app/Helper/I18n.php:269
-msgid "Public"
+#: ../app/Helper/I18n.php:186
+msgid "Subject"
 msgstr ""
 
 #: ../app/Helper/I18n.php:187
-msgid "Secret"
+msgid "Message"
 msgstr ""
 
 #: ../app/Helper/I18n.php:188
-msgid "ID"
+msgid "Clear"
 msgstr ""
 
 #: ../app/Helper/I18n.php:189
-msgid "Key"
+msgid "Account"
 msgstr ""
 
-#: ../app/Helper/I18n.php:190
-msgid "Personal"
+#: ../app/Helper/I18n.php:190, ../app/Helper/I18n.php:274
+msgid "Public"
 msgstr ""
 
 #: ../app/Helper/I18n.php:191
-msgid "Profile"
+msgid "Secret"
 msgstr ""
 
 #: ../app/Helper/I18n.php:192
-msgid "File"
+msgid "ID"
 msgstr ""
 
 #: ../app/Helper/I18n.php:193
-msgid "Section"
+msgid "Key"
 msgstr ""
 
 #: ../app/Helper/I18n.php:194
-msgid "Details"
+msgid "Personal"
 msgstr ""
 
 #: ../app/Helper/I18n.php:195
-msgid "Category"
+msgid "Profile"
+msgstr ""
+
+#: ../app/Helper/I18n.php:196
+msgid "File"
 msgstr ""
 
 #: ../app/Helper/I18n.php:197
-msgid "Logo"
+msgid "Section"
 msgstr ""
 
 #: ../app/Helper/I18n.php:198
-msgid "Continue"
+msgid "Details"
 msgstr ""
 
 #: ../app/Helper/I18n.php:199
-msgid "Save"
-msgstr ""
-
-#: ../app/Helper/I18n.php:200
-msgid "Copy Embeded Code"
+msgid "Category"
 msgstr ""
 
 #: ../app/Helper/I18n.php:201
-msgid "Close"
+msgid "Logo"
+msgstr ""
+
+#: ../app/Helper/I18n.php:202
+msgid "Continue"
 msgstr ""
 
 #: ../app/Helper/I18n.php:203
-msgid "Common"
+msgid "Save"
 msgstr ""
 
-#: ../app/Helper/I18n.php:204, ../app/Ctrl/Setting/Type/Dashboard.php:102, ../app/Ctrl/Setting/Type/Dashboard.php:103
-msgid "Settings"
+#: ../app/Helper/I18n.php:204
+msgid "Copy Embeded Code"
 msgstr ""
 
 #: ../app/Helper/I18n.php:205
-msgid "Prefix"
-msgstr ""
-
-#: ../app/Helper/I18n.php:206
-msgid "General"
+msgid "Close"
 msgstr ""
 
 #: ../app/Helper/I18n.php:207
-msgid "Business"
+msgid "Common"
 msgstr ""
 
-#: ../app/Helper/I18n.php:208
-msgid "Pay"
+#: ../app/Helper/I18n.php:208, ../app/Ctrl/Setting/Type/Dashboard.php:102, ../app/Ctrl/Setting/Type/Dashboard.php:103
+msgid "Settings"
 msgstr ""
 
 #: ../app/Helper/I18n.php:209
-msgid "Subscribe"
+msgid "Prefix"
 msgstr ""
 
 #: ../app/Helper/I18n.php:210
-msgid "Subscribed"
+msgid "General"
 msgstr ""
 
 #: ../app/Helper/I18n.php:211
-msgid "Subscription"
+msgid "Business"
 msgstr ""
 
 #: ../app/Helper/I18n.php:212
-msgid "Payment"
+msgid "Pay"
 msgstr ""
 
 #: ../app/Helper/I18n.php:213
-msgid "History"
+msgid "Subscribe"
 msgstr ""
 
 #: ../app/Helper/I18n.php:214
-msgid "Payment Info"
+msgid "Subscribed"
 msgstr ""
 
 #: ../app/Helper/I18n.php:215
-msgid "Method"
+msgid "Subscription"
 msgstr ""
 
 #: ../app/Helper/I18n.php:216
-msgid "Variable"
+msgid "Payment"
 msgstr ""
 
 #: ../app/Helper/I18n.php:217
-msgid "Import"
+msgid "History"
 msgstr ""
 
 #: ../app/Helper/I18n.php:218
-msgid "Export"
+msgid "Payment Info"
 msgstr ""
 
-#: ../app/Helper/I18n.php:219, ../app/Helper/I18n.php:310
-msgid "Integration"
+#: ../app/Helper/I18n.php:219
+msgid "Method"
 msgstr ""
 
 #: ../app/Helper/I18n.php:220
-msgid "License"
+msgid "Variable"
 msgstr ""
 
 #: ../app/Helper/I18n.php:221
-msgid "Expires"
+msgid "Import"
 msgstr ""
 
 #: ../app/Helper/I18n.php:222
-msgid "Valid"
+msgid "Export"
 msgstr ""
 
-#: ../app/Helper/I18n.php:223
-msgid "Priority"
+#: ../app/Helper/I18n.php:223, ../app/Helper/I18n.php:315
+msgid "Integration"
 msgstr ""
 
 #: ../app/Helper/I18n.php:224
-msgid "Meeting Place or"
+msgid "License"
 msgstr ""
 
 #: ../app/Helper/I18n.php:225
-msgid "meet"
+msgid "Expires"
 msgstr ""
 
-#: ../app/Helper/I18n.php:226, ../app/Helper/I18n.php:282
-msgid "Active"
+#: ../app/Helper/I18n.php:226
+msgid "Valid"
 msgstr ""
 
 #: ../app/Helper/I18n.php:227
-msgid "Activate"
+msgid "Priority"
 msgstr ""
 
 #: ../app/Helper/I18n.php:228
-msgid "Deactivate"
+msgid "Meeting Place or"
 msgstr ""
 
-#: ../app/Helper/I18n.php:230
-msgid "Thanks for accepting"
+#: ../app/Helper/I18n.php:229
+msgid "meet"
+msgstr ""
+
+#: ../app/Helper/I18n.php:230, ../app/Helper/I18n.php:287
+msgid "Active"
 msgstr ""
 
 #: ../app/Helper/I18n.php:231
-msgid "Sorry for declining"
+msgid "Activate"
 msgstr ""
 
 #: ../app/Helper/I18n.php:232
-msgid "Sorry for the decline"
-msgstr ""
-
-#: ../app/Helper/I18n.php:233
-msgid "You haven't pay yet"
+msgid "Deactivate"
 msgstr ""
 
 #: ../app/Helper/I18n.php:234
-msgid "Thanks, We have received the payment"
+msgid "Thanks for accepting"
+msgstr ""
+
+#: ../app/Helper/I18n.php:235
+msgid "Sorry for declining"
+msgstr ""
+
+#: ../app/Helper/I18n.php:236
+msgid "Sorry for the decline"
+msgstr ""
+
+#: ../app/Helper/I18n.php:237
+msgid "You haven't pay yet"
 msgstr ""
 
 #: ../app/Helper/I18n.php:238
-msgid "You have submited your payment information. it will take a while to approve the payment"
+msgid "Thanks, We have received the payment"
 msgstr ""
 
 #: ../app/Helper/I18n.php:242
-msgid "Approval Pending"
-msgstr ""
-
-#: ../app/Helper/I18n.php:245
-msgid "Pipeline"
+msgid "You have submited your payment information. it will take a while to approve the payment"
 msgstr ""
 
 #: ../app/Helper/I18n.php:246
-msgid "Back to WP Dashboard"
-msgstr ""
-
-#: ../app/Helper/I18n.php:247
-msgid "Mark as"
-msgstr ""
-
-#: ../app/Helper/I18n.php:248
-msgid "Drive"
+msgid "Approval Pending"
 msgstr ""
 
 #: ../app/Helper/I18n.php:249
-msgid "Done"
+msgid "Pipeline"
+msgstr ""
+
+#: ../app/Helper/I18n.php:250
+msgid "Back to WP Dashboard"
 msgstr ""
 
 #: ../app/Helper/I18n.php:251
-msgid "completed"
+msgid "Mark as"
 msgstr ""
 
 #: ../app/Helper/I18n.php:252
-msgid "as"
+msgid "Drive"
 msgstr ""
 
 #: ../app/Helper/I18n.php:253
-msgid "successful"
-msgstr ""
-
-#: ../app/Helper/I18n.php:254
-msgid "Submit"
+msgid "Done"
 msgstr ""
 
 #: ../app/Helper/I18n.php:255
-msgid "Proposal"
+msgid "completed"
 msgstr ""
 
 #: ../app/Helper/I18n.php:256
-msgid "Accounting"
+msgid "as"
 msgstr ""
 
 #: ../app/Helper/I18n.php:257
-msgid "Need Support"
+msgid "successful"
 msgstr ""
 
 #: ../app/Helper/I18n.php:258
-msgid "Feedback"
+msgid "Submit"
 msgstr ""
 
 #: ../app/Helper/I18n.php:259
-msgid "Attachment"
+msgid "Proposal"
 msgstr ""
 
 #: ../app/Helper/I18n.php:260
-msgid "Fee"
+msgid "Accounting"
 msgstr ""
 
 #: ../app/Helper/I18n.php:261
-msgid "Field"
+msgid "Need Support"
 msgstr ""
 
 #: ../app/Helper/I18n.php:262
-msgid "Fields"
+msgid "Feedback"
 msgstr ""
 
 #: ../app/Helper/I18n.php:263
-msgid "Team"
+msgid "Attachment"
 msgstr ""
 
 #: ../app/Helper/I18n.php:264
-msgid "Member"
+msgid "Fee"
 msgstr ""
 
 #: ../app/Helper/I18n.php:265
-msgid "Discount"
+msgid "Field"
 msgstr ""
 
 #: ../app/Helper/I18n.php:266
-msgid "Transaction"
+msgid "Fields"
 msgstr ""
 
-#: ../app/Helper/I18n.php:267, ../app/Ctrl/Api/Type/Payment.php:230
-msgid "Stripe"
+#: ../app/Helper/I18n.php:267
+msgid "Team"
 msgstr ""
 
-#: ../app/Helper/I18n.php:268, ../app/Ctrl/Api/Type/Payment.php:226
-msgid "Paypal"
+#: ../app/Helper/I18n.php:268
+msgid "Member"
+msgstr ""
+
+#: ../app/Helper/I18n.php:269
+msgid "Discount"
 msgstr ""
 
 #: ../app/Helper/I18n.php:270
-msgid "Full"
+msgid "Saved Items"
 msgstr ""
 
 #: ../app/Helper/I18n.php:271
-msgid "delivery"
+msgid "Transaction"
 msgstr ""
 
-#: ../app/Helper/I18n.php:272
-msgid "option"
+#: ../app/Helper/I18n.php:272, ../app/Ctrl/Api/Type/Payment.php:230
+msgid "Stripe"
 msgstr ""
 
-#: ../app/Helper/I18n.php:273
-msgid "Upload"
-msgstr ""
-
-#: ../app/Helper/I18n.php:274
-msgid "link"
+#: ../app/Helper/I18n.php:273, ../app/Ctrl/Api/Type/Payment.php:226
+msgid "Paypal"
 msgstr ""
 
 #: ../app/Helper/I18n.php:275
-msgid "First"
+msgid "Full"
 msgstr ""
 
 #: ../app/Helper/I18n.php:276
-msgid "Last"
+msgid "delivery"
 msgstr ""
 
 #: ../app/Helper/I18n.php:277
-msgid "Company"
+msgid "option"
 msgstr ""
 
 #: ../app/Helper/I18n.php:278
-msgid "Connect Zoom"
+msgid "Upload"
 msgstr ""
 
 #: ../app/Helper/I18n.php:279
-msgid "Unschedule"
+msgid "link"
 msgstr ""
 
 #: ../app/Helper/I18n.php:280
-msgid "Address"
+msgid "First"
 msgstr ""
 
 #: ../app/Helper/I18n.php:281
-msgid " Timeline"
+msgid "Last"
+msgstr ""
+
+#: ../app/Helper/I18n.php:282
+msgid "Company"
 msgstr ""
 
 #: ../app/Helper/I18n.php:283
-msgid "Media"
+msgid "Connect Zoom"
 msgstr ""
 
 #: ../app/Helper/I18n.php:284
-msgid "Gallery"
+msgid "Unschedule"
 msgstr ""
 
 #: ../app/Helper/I18n.php:285
-msgid "Insert"
+msgid "Address"
 msgstr ""
 
 #: ../app/Helper/I18n.php:286
-msgid "Others"
-msgstr ""
-
-#: ../app/Helper/I18n.php:287
-msgid "Bank"
+msgid " Timeline"
 msgstr ""
 
 #: ../app/Helper/I18n.php:288
-msgid "Skip"
+msgid "Media"
 msgstr ""
 
 #: ../app/Helper/I18n.php:289
-msgid "Label"
+msgid "Gallery"
 msgstr ""
 
 #: ../app/Helper/I18n.php:290
-msgid "Block"
+msgid "Insert"
 msgstr ""
 
 #: ../app/Helper/I18n.php:291
-msgid "Move"
+msgid "Others"
 msgstr ""
 
 #: ../app/Helper/I18n.php:292
-msgid "Move to"
+msgid "Bank"
 msgstr ""
 
 #: ../app/Helper/I18n.php:293
-msgid "Go"
+msgid "Skip"
 msgstr ""
 
 #: ../app/Helper/I18n.php:294
-msgid "Receipt"
+msgid "Label"
 msgstr ""
 
 #: ../app/Helper/I18n.php:295
-msgid "Explore"
+msgid "Block"
+msgstr ""
+
+#: ../app/Helper/I18n.php:296
+msgid "Move"
 msgstr ""
 
 #: ../app/Helper/I18n.php:297
-msgid "With"
+msgid "Move to"
+msgstr ""
+
+#: ../app/Helper/I18n.php:298
+msgid "Go"
 msgstr ""
 
 #: ../app/Helper/I18n.php:299
-msgid "Without"
+msgid "Receipt"
 msgstr ""
 
 #: ../app/Helper/I18n.php:300
-msgid "Parent"
-msgstr ""
-
-#: ../app/Helper/I18n.php:301
-msgid "To"
+msgid "Explore"
 msgstr ""
 
 #: ../app/Helper/I18n.php:302
-msgid "Copy"
-msgstr ""
-
-#: ../app/Helper/I18n.php:303
-msgid "Per"
+msgid "With"
 msgstr ""
 
 #: ../app/Helper/I18n.php:304
-msgid "Each Item"
+msgid "Without"
 msgstr ""
 
 #: ../app/Helper/I18n.php:305
-msgid "Tax"
+msgid "Parent"
 msgstr ""
 
 #: ../app/Helper/I18n.php:306
-msgid "Calculation"
+msgid "To"
 msgstr ""
 
 #: ../app/Helper/I18n.php:307
-msgid "Fixed"
+msgid "Copy"
 msgstr ""
 
 #: ../app/Helper/I18n.php:308
-msgid "Percent"
+msgid "Per"
 msgstr ""
 
 #: ../app/Helper/I18n.php:309
-msgid "Logout"
+msgid "Each Item"
+msgstr ""
+
+#: ../app/Helper/I18n.php:310
+msgid "Tax"
 msgstr ""
 
 #: ../app/Helper/I18n.php:311
-msgid "License Manager"
+msgid "Calculation"
 msgstr ""
 
 #: ../app/Helper/I18n.php:312
-msgid "My Work"
+msgid "Fixed"
 msgstr ""
 
 #: ../app/Helper/I18n.php:313
-msgid "My"
+msgid "Percent"
 msgstr ""
 
 #: ../app/Helper/I18n.php:314
-msgid "Today"
-msgstr ""
-
-#: ../app/Helper/I18n.php:315
-msgid "Others Day"
+msgid "Logout"
 msgstr ""
 
 #: ../app/Helper/I18n.php:316
-msgid "Items Selected"
+msgid "License Manager"
 msgstr ""
 
 #: ../app/Helper/I18n.php:317
-msgid "On"
+msgid "My Work"
 msgstr ""
 
 #: ../app/Helper/I18n.php:318
-msgid "Upgrade to Pro"
+msgid "My"
 msgstr ""
 
 #: ../app/Helper/I18n.php:319
-msgid "Try Propovoice Pro!"
+msgid "Today"
 msgstr ""
 
 #: ../app/Helper/I18n.php:320
-msgid "This is pro features, To use this features you need to upgrade with Pro plugin"
+msgid "Others Day"
+msgstr ""
+
+#: ../app/Helper/I18n.php:321
+msgid "Items Selected"
+msgstr ""
+
+#: ../app/Helper/I18n.php:322
+msgid "On"
+msgstr ""
+
+#: ../app/Helper/I18n.php:323
+msgid "Upgrade to Pro"
 msgstr ""
 
 #: ../app/Helper/I18n.php:324
-msgid "Contact With Us"
+msgid "Try Propovoice Pro!"
 msgstr ""
 
 #: ../app/Helper/I18n.php:325
-msgid "How often?"
-msgstr ""
-
-#: ../app/Helper/I18n.php:326
-msgid "How Many?"
-msgstr ""
-
-#: ../app/Helper/I18n.php:327
-msgid "On going"
-msgstr ""
-
-#: ../app/Helper/I18n.php:328
-msgid "automatically"
+msgid "This is pro features, To use this features you need to upgrade with Pro plugin"
 msgstr ""
 
 #: ../app/Helper/I18n.php:329
-msgid "Create Draft and send manually"
+msgid "Contact With Us"
+msgstr ""
+
+#: ../app/Helper/I18n.php:330
+msgid "How often?"
+msgstr ""
+
+#: ../app/Helper/I18n.php:331
+msgid "How Many?"
+msgstr ""
+
+#: ../app/Helper/I18n.php:332
+msgid "On going"
 msgstr ""
 
 #: ../app/Helper/I18n.php:333
-msgid "Send me a copy"
+msgid "automatically"
 msgstr ""
 
 #: ../app/Helper/I18n.php:334
-msgid "Limit"
-msgstr ""
-
-#: ../app/Helper/I18n.php:335
-msgid "Times"
-msgstr ""
-
-#: ../app/Helper/I18n.php:336
-msgid "Daily"
-msgstr ""
-
-#: ../app/Helper/I18n.php:337
-msgid "Weekly"
+msgid "Create Draft and send manually"
 msgstr ""
 
 #: ../app/Helper/I18n.php:338
-msgid "Monthly"
+msgid "Send me a copy"
 msgstr ""
 
 #: ../app/Helper/I18n.php:339
-msgid "Quarterly"
+msgid "Limit"
 msgstr ""
 
 #: ../app/Helper/I18n.php:340
-msgid "Yearly"
+msgid "Times"
 msgstr ""
 
 #: ../app/Helper/I18n.php:341
-msgid "Half Yearly"
+msgid "Daily"
 msgstr ""
 
 #: ../app/Helper/I18n.php:342
-msgid "Custom"
+msgid "Weekly"
 msgstr ""
 
 #: ../app/Helper/I18n.php:343
-msgid "Interval In"
+msgid "Monthly"
 msgstr ""
 
 #: ../app/Helper/I18n.php:344
-msgid "Hour"
+msgid "Quarterly"
 msgstr ""
 
 #: ../app/Helper/I18n.php:345
-msgid "Day"
+msgid "Yearly"
 msgstr ""
 
 #: ../app/Helper/I18n.php:346
-msgid "days"
+msgid "Half Yearly"
 msgstr ""
 
 #: ../app/Helper/I18n.php:347
-msgid "Week"
+msgid "Custom"
 msgstr ""
 
 #: ../app/Helper/I18n.php:348
-msgid "Month"
+msgid "Interval In"
 msgstr ""
 
 #: ../app/Helper/I18n.php:349
-msgid "Year"
+msgid "Hour"
 msgstr ""
 
 #: ../app/Helper/I18n.php:350
-msgid "Uploaded by"
+msgid "Day"
 msgstr ""
 
 #: ../app/Helper/I18n.php:351
-msgid "Please fill up necessary information in the form."
+msgid "days"
+msgstr ""
+
+#: ../app/Helper/I18n.php:352
+msgid "Week"
+msgstr ""
+
+#: ../app/Helper/I18n.php:353
+msgid "Month"
+msgstr ""
+
+#: ../app/Helper/I18n.php:354
+msgid "Year"
 msgstr ""
 
 #: ../app/Helper/I18n.php:355
+msgid "Uploaded by"
+msgstr ""
+
+#: ../app/Helper/I18n.php:356
+msgid "Please fill up necessary information in the form."
+msgstr ""
+
+#: ../app/Helper/I18n.php:360
 msgid "Please fill up Business info first"
 msgstr ""
 
-#: ../app/Helper/I18n.php:359
+#: ../app/Helper/I18n.php:364
 msgid "You need to mention bank details here, Like: Name, Routing No. etc"
 msgstr ""
 
 #. translators: %s: Module Name
-#: ../app/Helper/I18n.php:364
+#: ../app/Helper/I18n.php:369
 msgid "No %s found by your search query."
 msgstr ""
 
 #. translators: %s: Adding, Creating text
-#: ../app/Helper/I18n.php:369
+#: ../app/Helper/I18n.php:374
 msgid "Let's Start %s"
 msgstr ""
 
-#: ../app/Helper/I18n.php:370
+#: ../app/Helper/I18n.php:375
 msgid "Let's Start Adding"
 msgstr ""
 
-#: ../app/Helper/I18n.php:371
+#: ../app/Helper/I18n.php:376
 msgid "Let's Start Creating"
 msgstr ""
 
-#: ../app/Helper/I18n.php:372
+#: ../app/Helper/I18n.php:377
 msgid "Adding"
 msgstr ""
 
-#: ../app/Helper/I18n.php:373
+#: ../app/Helper/I18n.php:378
 msgid "Creating"
 msgstr ""
 
-#: ../app/Helper/I18n.php:374
+#: ../app/Helper/I18n.php:379
 msgid "added"
 msgstr ""
 
-#: ../app/Helper/I18n.php:375
+#: ../app/Helper/I18n.php:380
 msgid "created"
 msgstr ""
 
 #. translators: %s: Added, Created text, %s: Module Name
-#: ../app/Helper/I18n.php:377
+#: ../app/Helper/I18n.php:382
 msgid "You have not %s any %s yet."
 msgstr ""
 
-#: ../app/Helper/I18n.php:378
+#: ../app/Helper/I18n.php:383
 msgid "any"
 msgstr ""
 
-#: ../app/Helper/I18n.php:381
+#: ../app/Helper/I18n.php:386
 msgid "Click to upload File"
 msgstr ""
 
-#: ../app/Helper/I18n.php:382
+#: ../app/Helper/I18n.php:387
 msgid "sample"
 msgstr ""
 
-#: ../app/Helper/I18n.php:383
+#: ../app/Helper/I18n.php:388
 msgid "Next [Map Columns]"
 msgstr ""
 
-#: ../app/Helper/I18n.php:384
+#: ../app/Helper/I18n.php:389
 msgid ""
-"Please make sure your csv file has unique\n"
+"Please make sure your csv file has unique\n"
 "                      headers.Otherwise, it may fail to import"
 msgstr ""
 
@@ -1345,15 +1353,15 @@ msgstr ""
 msgid "Type is missing"
 msgstr ""
 
-#: ../app/Ctrl/Api/Type/Invoice.php:618, ../app/Ctrl/Api/Type/Invoice.php:769
+#: ../app/Ctrl/Api/Type/Invoice.php:620, ../app/Ctrl/Api/Type/Invoice.php:771
 msgid "Business is missing"
 msgstr ""
 
-#: ../app/Ctrl/Api/Type/Invoice.php:625
+#: ../app/Ctrl/Api/Type/Invoice.php:627
 msgid "Module is missing"
 msgstr ""
 
-#: ../app/Ctrl/Api/Type/Invoice.php:632, ../app/Ctrl/Api/Type/Invoice.php:776
+#: ../app/Ctrl/Api/Type/Invoice.php:634, ../app/Ctrl/Api/Type/Invoice.php:778
 msgid "Receiver is missing"
 msgstr ""
 
